# Bot

./: .pdm-python  README.md  bot.py  pyproject.toml
src/plugins/message_exchange/: __init__.py  config.py  get_bot.py  mc.py  msg_parse.py  qq.py
